# gui/api.go
@@ -2,7 +2,9 @@ package gui
 
 import (
 	"bytes"
+	"crypto/sha256"
 	"embed"
+	"encoding/hex"
 	"encoding/json"
 	"fmt"
 	"html/template"
@@ -17,14 +19,15 @@ import (
 
 	"github.com/GridPlus/phonon-client/model"
 	"github.com/GridPlus/phonon-client/orchestrator"
+	"github.com/GridPlus/phonon-client/util"
 	"github.com/getlantern/systray"
 	"github.com/gorilla/mux"
 	"github.com/pkg/browser"
 	"github.com/rs/cors"
+
 	log "github.com/sirupsen/logrus"
 )
 
-//go:embed frontend/build/*
 var frontend embed.FS
 
 //go:embed swagger.yaml
@@ -41,6 +44,11 @@ var xIcon []byte
 
 type apiSession struct {
 	t *orchestrator.PhononTerminal
+}
+
+type Signature struct {
+	R string
+	S string
 }
 
 func Server(port string, certFile string, keyFile string, mock bool) {
@@ -80,10 +88,14 @@ func Server(port string, certFile string, keyFile string, mock bool) {
 	r.HandleFunc("/cards/{sessionID}/unlock", session.unlock)
 	r.HandleFunc("/cards/{sessionID}/pair", session.pair)
 	r.HandleFunc("/cards/{sessionID}/name", session.setName)
+	r.HandleFunc("/cards/{sessionID}/postedPhononNonce", session.GetPostedPhononNonce)
+	r.HandleFunc("/cards/{sessionID}/identity/{nonce}", session.getIdentity)
 	// phonons
 	r.HandleFunc("/cards/{sessionID}/listPhonons", session.listPhonons)
+	r.HandleFunc("/cards/{sessionID}/receivePostedPhonons", session.consumePosted)
 	r.HandleFunc("/cards/{sessionID}/phonon/{PhononIndex}/setDescriptor", session.setDescriptor)
 	r.HandleFunc("/cards/{sessionID}/phonon/send", session.send)
+	r.HandleFunc("/cards/{sessionID}/phonon/post", session.postPhonons)
 	r.HandleFunc("/cards/{sessionID}/phonon/create", session.createPhonon)
 	r.HandleFunc("/cards/{sessionID}/phonon/redeem", session.redeemPhonons)
 	r.HandleFunc("/cards/{sessionID}/phonon/{PhononIndex}/export", session.exportPhonon)
@@ -467,6 +479,61 @@ func (apiSession apiSession) init(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
+func (apiSession apiSession) GetPostedPhononNonce(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	sess, err := apiSession.sessionFromMuxVars(vars)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusNotFound)
+		return
+	}
+
+	nonce, err := sess.GetPostedPhononNonce()
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	enc := json.NewEncoder(w)
+	enc.Encode(struct {
+		Nonce uint64
+	}{Nonce: nonce})
+}
+
+func (apiSession apiSession) getIdentity(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+
+	sess, err := apiSession.sessionFromMuxVars(vars)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusNotFound)
+		return
+	}
+
+	nonce, ok := vars["nonce"]
+	if !ok {
+		fmt.Println("nonce not found")
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	nonceHash := sha256.Sum256([]byte(nonce))
+
+	publicKey, signature, err := sess.IdentifyCard(nonceHash[:])
+	if err != nil {
+		fmt.Println("error identifying card")
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	enc := json.NewEncoder(w)
+	enc.Encode(struct {
+		PublicKey string
+		Signature Signature
+	}{PublicKey: util.ECCPubKeyToHexString(publicKey), Signature: Signature{
+		R: signature.R.String(),
+		S: signature.S.String(),
+	}})
+}
+
 func (apiSession apiSession) unlock(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	sess, err := apiSession.sessionFromMuxVars(vars)
@@ -723,6 +790,90 @@ func (apiSession apiSession) send(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, "unable to send phonons: "+err.Error(), http.StatusInternalServerError)
 		return
 	}
+}
+
+func (apiSession apiSession) postPhonons(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	sess, err := apiSession.sessionFromMuxVars(vars)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusNotFound)
+		return
+	}
+	bodyBytes, err := ioutil.ReadAll(r.Body)
+	if err != nil {
+		http.Error(w, "Unable to read body", http.StatusBadRequest)
+		return
+	}
+
+	body := struct {
+		Nonce               int64
+		RecipientsPublicKey string
+		KeyIndexes          []model.PhononKeyIndex
+	}{}
+
+	err = json.Unmarshal(bodyBytes, &body)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+	}
+
+	recipientsPublicKeyBytes, err := hex.DecodeString(body.RecipientsPublicKey)
+	recipientsPublicKey, err := util.ParseECCPubKey(recipientsPublicKeyBytes)
+	if err != nil {
+		http.Error(w, "unable to post phonons: "+err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	packet, err := sess.PostPhonons(recipientsPublicKey, uint64(body.Nonce), body.KeyIndexes)
+	if err != nil {
+		http.Error(w, "unable to post phonons: "+err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	enc := json.NewEncoder(w)
+
+	enc.Encode(struct {
+		Packet string
+	}{Packet: hex.EncodeToString(packet)})
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+}
+
+func (apiSession apiSession) consumePosted(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	sess, err := apiSession.sessionFromMuxVars(vars)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusNotFound)
+		return
+	}
+
+	rawBody, err := ioutil.ReadAll(r.Body)
+	if err != nil {
+		http.Error(w, "Unable to read body", http.StatusBadRequest)
+		return
+	}
+	body := struct {
+		Packet string
+	}{}
+	err = json.Unmarshal(rawBody, &body)
+
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+	}
+
+	packet, err := hex.DecodeString(body.Packet)
+	if err != nil {
+		http.Error(w, "Unable to redeem phonons: "+err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	err = sess.ReceivePostedPhonons(packet)
+	if err != nil {
+		http.Error(w, "unable to redeem phonons: "+err.Error(), http.StatusInternalServerError)
+		return
+	}
+
 }
 
 func (apiSession apiSession) exportPhonon(w http.ResponseWriter, r *http.Request) {
